# dazzlecmd

./: .ghtraf.json  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml  pages.yml  publish.yml
config/: dazzlecmd.schema.json
docs/: Principles.md  platform-support.md
docs/guides/: config.md  creating-tools.md  dz-kit.md  dz-setup.md  dz-tree.md  kits.md  manifests.md
docs/stats/: README.md  index.html
docs/tools/core/: README.md  find.md  fixpath.md  links.md  listall.md  rn.md
docs/tools/dazzletools/: README.md
kits/: claude.kit.json  core.kit.json  dazzletools.kit.json  wtf.kit.json
projects/core/: .kit.json
projects/core/find/: .dazzlecmd.json  find.py
projects/core/fixpath/: .dazzlecmd.json  fixpath.py
projects/core/links/: .dazzlecmd.json  links.py  requirements.txt
projects/core/rn/: .dazzlecmd.json  rn.py
projects/core/safedel/: .dazzlecmd.json  .gitignore  ROADMAP.md  TODO.md  _classifier.py  _platform.py  (+7 more)
projects/dazzletools/: .kit.json
scripts/: install-hooks.sh  update-version.sh
scripts/hooks/: post-commit  pre-commit  pre-push
src/dazzlecmd/: __init__.py  __main__.py  _version.py  cli.py  engine.py  importer.py  loader.py  mode.py
tests/: README.md  conftest.py  test_cli_helpers.py  test_cli_info.py  test_cli_kit.py  test_cli_list_sections.py  test_cli_setup.py  test_cli_tree.py  test_conditions.py  test_default_meta_commands.py  test_docker_integration.py  test_docker_runner.py  test_engine_config.py  test_engine_fqcn.py  test_engine_meta_registry.py  test_engine_recursive.py  test_env_var_injection.py  test_fqcn_index_alias.py  test_git_snapshot.py  test_importer.py  test_library.py  test_meta_command_registry.py  test_mode.py  test_path_form_convergence.py  test_paths.py  test_platform_detect.py  test_platform_resolve.py  test_python_runner_interpreter.py  test_registry.py  test_resolution_trace.py  test_resolve_runtime.py  test_schema_version.py  test_setup_resolve.py  test_smoke.py  test_stale_favorites_warning.py  test_templates.py  test_user_override_integration.py  test_user_overrides.py  test_user_overrides_per_aggregator.py  test_vars_integration.py  (+2 more)
tests/checklists/: v0.7.11__Phase3__kit-management-and-config-write.md  v0.7.15__Phase4c-1__binary-runner-polish.md  v0.7.16__Phase4c-2__shell-runner-enhancements.md  v0.7.17__Phase4c-3__node-runtime.md  v0.7.19__Phase4c-5__conditional-dispatch.md  v0.7.20__Feature__setup-parity-and-venv-dispatch.md  v0.7.21__Phase4c-4__docker-runtime.md  v0.7.22__Feature__user-override-integration.md  v0.7.23__Phase4d-Phase1__meta-command-registry-and-library-surface.md  v0.7.24__Phase4d-Phase2__wtf-windows-adoption-and-library-fixes.md  v0.7.26__Phase4e_C2__virtual-kits-and-cross-aggregator-option-a.md  v0.7.27__Phase4e_C3_C4__alias-blindness-rule7c-display-env-vars.md  v0.7.28__Phase4e_C5__sectioned-display-qualified-alias.md  v0.8.0__Phase4b-addendum__templates-setup-lifecycle.md  v0.8.0__Phase4b__dazzlecmd-lib-extraction.md
tests/one-offs/: experiment_r3b_conflicts.py  experiment_r3b_name_rewrite.py  experiment_r3b_performance.py  run_phase3_checklist.py  test_fqcn_prototype.py
tests/reports/: 2026-04-13__v0.7.11__Phase3__kit-management-and-config-write.md
(+61 files in other folders)
