[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dazzlecmd"
dynamic = ["version"]
description = "Unified CLI for the DazzleTools collection - many tools, one command"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
authors = [
    {name = "Dustin", email = "6962246+djdarcy@users.noreply.github.com"},
]
keywords = ["cli", "tools", "utility", "dazzletools", "dazzle", "command-line", "aggregator"]

dependencies = [
    "dazzlecmd-lib>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/DazzleTools/dazzlecmd"
Repository = "https://github.com/DazzleTools/dazzlecmd"
Issues = "https://github.com/DazzleTools/dazzlecmd/issues"

[project.scripts]
dazzlecmd = "dazzlecmd.cli:main"
dz = "dazzlecmd.cli:main"

[tool.setuptools.dynamic]
version = {attr = "dazzlecmd._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dazzlecmd*"]

[tool.setuptools.package-data]
"dazzlecmd" = ["templates/*"]

[tool.pytest.ini_options]
markers = [
    "shell_cmd: tests requiring Windows cmd.exe",
    "shell_bash: tests requiring bash in PATH",
    "shell_pwsh: tests requiring PowerShell Core (pwsh) in PATH",
    "shell_zsh: tests requiring zsh in PATH",
    "shell_csh: tests requiring csh/tcsh in PATH",
    "shell_env: tests exercising the shell_env chain feature",
    "shell_interactive: tests exercising interactive mode (slow; may need TTY)",
    "shell_exec: tests exercising os.execvp hand-off (cannot assert post-exec)",
    "node: tests requiring node in PATH",
    "bun: tests requiring bun in PATH",
    "deno: tests requiring deno in PATH",
    "tsx: tests requiring tsx in PATH",
    "ts_node: tests requiring ts-node in PATH",
    "npm: tests requiring npm in PATH",
    "npx: tests requiring npx in PATH",
    "venv_integration: heavy end-to-end tests that create a venv and pip install (opt-in; slow, needs network)",
    "docker_integration: end-to-end tests that build a docker image and run a container (opt-in; requires docker daemon)",
]
